--- a/ci-operator/jobs/openshift/elasticsearch-operator/openshift-elasticsearch-operator-feature-es6x-presubmits.yaml
+++ b/ci-operator/jobs/openshift/elasticsearch-operator/openshift-elasticsearch-operator-feature-es6x-presubmits.yaml
@@ -1,7 +1,7 @@
 presubmits:
   openshift/elasticsearch-operator:
   - agent: kubernetes
-    always_run: true
+    always_run: false
     branches:
     - feature-es6x
     context: ci/prow/e2e-operator
@@ -70,6 +70,78 @@ presubmits:
         secret:
           secretName: sentry-dsn
     trigger: (?m)^/test( | .* )e2e-operator,?($|\s.*)
+  - agent: kubernetes
+    always_run: true
+    branches:
+    - feature-es6x
+    context: ci/prow/e2e-operator-lworker
+    decorate: true
+    decoration_config:
+      skip_cloning: true
+    labels:
+      ci-operator.openshift.io/semantics-ignored: "true"
+      pj-rehearse.openshift.io/can-be-rehearsed: "true"
+    name: pull-ci-openshift-elasticsearch-operator-feature-es6x-e2e-operator-lworker
+    rerun_command: /test e2e-operator-lworker
+    spec:
+      containers:
+      - args:
+        - --artifact-dir=$(ARTIFACTS)
+        - --branch=feature-es6x
+        - --give-pr-author-access-to-namespace=true
+        - --lease-server=http://boskos
+        - --org=openshift
+        - --repo=elasticsearch-operator
+        - --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org
+        - --secret-dir=/usr/local/e2e-operator-cluster-profile
+        - --sentry-dsn-path=/etc/sentry-dsn/ci-operator
+        - --target=e2e-operator
+        - --template=/usr/local/e2e-operator
+        command:
+        - ci-operator
+        env:
+        - name: CLUSTER_TYPE
+          value: aws
+        - name: CLUSTER_VARIANT
+          value: xlarger_worker
+        - name: CONFIG_SPEC
+          valueFrom:
+            configMapKeyRef:
+              key: openshift-elasticsearch-operator-feature-es6x.yaml
+              name: ci-operator-misc-configs
+        - name: JOB_NAME_SAFE
+          value: e2e-operator
+        - name: TEST_COMMAND
+          value: make test-e2e
+        image: ci-operator:latest
+        imagePullPolicy: Always
+        name: ""
+        resources:
+          requests:
+            cpu: 10m
+        volumeMounts:
+        - mountPath: /usr/local/e2e-operator-cluster-profile
+          name: cluster-profile
+        - mountPath: /usr/local/e2e-operator
+          name: job-definition
+          subPath: cluster-launch-installer-src.yaml
+        - mountPath: /etc/sentry-dsn
+          name: sentry-dsn
+          readOnly: true
+      serviceAccountName: ci-operator
+      volumes:
+      - name: cluster-profile
+        projected:
+          sources:
+          - secret:
+              name: cluster-secrets-aws
+      - configMap:
+          name: prow-job-cluster-launch-installer-src
+        name: job-definition
+      - name: sentry-dsn
+        secret:
+          secretName: sentry-dsn
+    trigger: (?m)^/test( | .* )e2e-operator-lworker,?($|\s.*)
   - agent: kubernetes
     always_run: true
     branches:
