Add ports for four more clusters to the Z bastion
We want to try running more than one cluster simultaneously, so we need
to forward the traffic for each of the cluster slots. The system
currently chooses a slot based on the job hash (effectively randomly),
so we need enough slots to ensure that the odds are decent that there
won't be a collision. This is a temporary hack and we'll want something
more robust in the future.

The SSH invocation on the other end looks like the following:

-R 16509:127.0.0.1:16509 \
-R 6443:192.168.126.11:6443 -R 8080:192.168.126.51:80 -R 8443:192.168.126.51:443 \
-R 2210:192.168.126.10:22 -R 2211:192.168.126.11:22 -R 2212:192.168.126.12:22 -R 2213:192.168.126.13:22 \
-R 16443:192.168.1.11:6443 -R 10080:192.168.1.51:80 -R 10443:192.168.1.51:443 \
-R 26443:192.168.2.11:6443 -R 20080:192.168.2.51:80 -R 20443:192.168.2.51:443 \
-R 36443:192.168.3.11:6443 -R 30080:192.168.3.51:80 -R 30443:192.168.3.51:443 \
-R 46443:192.168.4.11:6443 -R 40080:192.168.4.51:80 -R 40443:192.168.4.51:443 \

--- a/core-services/sshd-bastion/z/deployment.yaml
+++ b/core-services/sshd-bastion/z/deployment.yaml
@@ -14,18 +14,54 @@ items:
       app: prow
       component: sshd
     ports:
-    - name: api
-      port: 6443
-      targetPort: api
     - name: libvirt
       port: 16509
       targetPort: libvirt
+    - name: api
+      port: 6443
+      targetPort: api
     - name: http
       port: 80
       targetPort: http
     - name: https
       port: 443
       targetPort: https
+    - name: api-1
+      port: 16443
+      targetPort: api-1
+    - name: http-1
+      port: 10080
+      targetPort: http-1
+    - name: https-1
+      port: 10443
+      targetPort: https-1
+    - name: api-2
+      port: 26443
+      targetPort: api-2
+    - name: http-2
+      port: 20080
+      targetPort: http-2
+    - name: https-2
+      port: 20443
+      targetPort: https-2
+    - name: api-3
+      port: 36443
+      targetPort: api-3
+    - name: http-3
+      port: 30080
+      targetPort: http-3
+    - name: https-3
+      port: 30443
+      targetPort: https-3
+    - name: api-4
+      port: 46443
+      targetPort: api-4
+    - name: http-4
+      port: 40080
+      targetPort: http-4
+    - name: https-4
+      port: 40443
+      targetPort: https-4
     type: ClusterIP
 - apiVersion: apps/v1
   kind: Deployment
@@ -61,14 +97,38 @@ items:
           ports:
             - name: ssh
               containerPort: 2222
-            - name: api
-              containerPort: 6443
             - name: libvirt
               containerPort: 16509
+            - name: api
+              containerPort: 6443
             - name: http
               containerPort: 8080
             - name: https
               containerPort: 8443
+            - name: api-1
+              containerPort: 16443
+            - name: http-1
+              containerPort: 10080
+            - name: https-1
+              containerPort: 10443
+            - name: api-2
+              containerPort: 26443
+            - name: http-2
+              containerPort: 20080
+            - name: https-2
+              containerPort: 20443
+            - name: api-3
+              containerPort: 36443
+            - name: http-3
+              containerPort: 30080
+            - name: https-3
+              containerPort: 30443
+            - name: api-4
+              containerPort: 46443
+            - name: http-4
+              containerPort: 40080
+            - name: https-4
+              containerPort: 40443
           volumeMounts:
           - name: authorized-keys
             mountPath: /keys/authorized
