--- a/ci-operator/jobs/openshift/release/openshift-release-release-4.3-periodics.yaml
+++ b/ci-operator/jobs/openshift/release/openshift-release-release-4.3-periodics.yaml
@@ -26,7 +26,7 @@ periodics:
       - name: BRANCH
         value: "4.3"
       - name: RELEASE_IMAGE_LATEST
-        value: registry.svc.ci.openshift.org/ocp/release:4.3-ci
+        value: registry.svc.ci.openshift.org/ocp/release:4.3
       - name: CLUSTER_TYPE
         value: aws
       - name: CONFIG_SPEC
@@ -103,7 +103,7 @@ periodics:
       - name: BRANCH
         value: "4.3"
       - name: RELEASE_IMAGE_LATEST
-        value: registry.svc.ci.openshift.org/ocp/release:4.3-ci
+        value: registry.svc.ci.openshift.org/ocp/release:4.3
       - name: CLUSTER_TYPE
         value: aws
       - name: CONFIG_SPEC
@@ -193,7 +193,7 @@ periodics:
       - name: BRANCH
         value: "4.3"
       - name: RELEASE_IMAGE_LATEST
-        value: registry.svc.ci.openshift.org/ocp/release:4.3-ci
+        value: registry.svc.ci.openshift.org/ocp/release:4.3
       - name: CLUSTER_TYPE
         value: aws
       - name: CONFIG_SPEC
