--- a/ci-operator/jobs/openshift/hypershift-toolkit/openshift-hypershift-toolkit-release-4.3-periodics.yaml
+++ b/ci-operator/jobs/openshift/hypershift-toolkit/openshift-hypershift-toolkit-release-4.3-periodics.yaml
@@ -1,6 +1,10 @@
 periodics:
 - agent: kubernetes
   decorate: true
+  extra_refs:
+  - base_ref: release-4.3
+    org: openshift
+    repo: hypershift-toolkit
   interval: 12h
   name: openshift-hypershift-toolkit-release-4.3-create-cluster-periodics
   spec:
