--- a/ci-operator/config/openshift/cluster-csi-snapshot-controller-operator/openshift-cluster-csi-snapshot-controller-operator-release-4.4.yaml
+++ b/ci-operator/config/openshift/cluster-csi-snapshot-controller-operator/openshift-cluster-csi-snapshot-controller-operator-release-4.4.yaml
@@ -45,3 +45,12 @@ tests:
     make test-unit JUNITFILE=/tmp/artifacts/junit_report.xml
   container:
     from: src
+- as: e2e-aws
+  commands: TEST_SUITE=openshift/conformance/parallel run-tests
+  openshift_installer:
+    cluster_profile: aws
+- as: e2e-aws-upgrade
+  commands: TEST_SUITE=all run-upgrade-tests
+  openshift_installer:
+    cluster_profile: aws
+    upgrade: true
