--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -154,6 +154,10 @@ bugzilla:
       dependent_bug_target_release: 4.3.0
       target_release: 4.2.z
       validate_by_default: true
+    openshift-4.3:
+      dependent_bug_target_release: 4.4.0
+      target_release: 4.3.z
+      validate_by_default: true
     release-4.1:
       dependent_bug_target_release: 4.2.z
       target_release: 4.1.z
@@ -163,15 +167,8 @@ bugzilla:
       target_release: 4.2.z
       validate_by_default: true
     release-4.3:
-      dependent_bug_states:
-      - status: MODIFIED
-      - status: ON_QA
-      - status: VERIFIED
-      - status: RELEASE_PENDING
-      - resolution: ERRATA
-        status: CLOSED
       dependent_bug_target_release: 4.4.0
-      target_release: 4.3.0
+      target_release: 4.3.z
       validate_by_default: true
     release-4.4:
       target_release: 4.4.0
