--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -151,19 +151,29 @@ bugzilla:
       target_release: 4.1.z
       validate_by_default: true
     openshift-4.2:
-      dependent_bug_target_release: 4.3.0
+      dependent_bug_target_release: 4.3.z
       target_release: 4.2.z
       validate_by_default: true
     openshift-4.3:
       dependent_bug_target_release: 4.4.0
       target_release: 4.3.z
       validate_by_default: true
+    openshift-4.4:
+      dependent_bug_states:
+      - status: MODIFIED
+      - status: ON_QA
+      - status: VERIFIED
+      - status: RELEASE_PENDING
+      - resolution: ERRATA
+        status: CLOSED
+      target_release: 4.4.0
+      validate_by_default: true
     release-4.1:
       dependent_bug_target_release: 4.2.z
       target_release: 4.1.z
       validate_by_default: true
     release-4.2:
-      dependent_bug_target_release: 4.3.0
+      dependent_bug_target_release: 4.3.z
       target_release: 4.2.z
       validate_by_default: true
     release-4.3:
@@ -171,6 +181,13 @@ bugzilla:
       target_release: 4.3.z
       validate_by_default: true
     release-4.4:
+      dependent_bug_states:
+      - status: MODIFIED
+      - status: ON_QA
+      - status: VERIFIED
+      - status: RELEASE_PENDING
+      - resolution: ERRATA
+        status: CLOSED
       target_release: 4.4.0
       validate_by_default: true
   orgs:
