--- a/ci-operator/jobs/openshift/openshift-azure/openshift-openshift-azure-master-presubmits.yaml
+++ b/ci-operator/jobs/openshift/openshift-azure/openshift-openshift-azure-master-presubmits.yaml
@@ -399,6 +399,24 @@ presubmits:
       serviceAccountName: ci-operator
     trigger: (?m)^/test( | .* )upgrade-v14.0,?($|\s.*)
   - agent: kubernetes
+    always_run: true
+    branches:
+    - master
+    context: upgrade-v14.1
+    decorate: true
+    name: pull-ci-azure-master-upgrade-v14.1
+    rerun_command: /test upgrade-v14.1
+    spec:
+      containers:
+      - args:
+        - hack/tests/e2e-upgrade.sh
+        - v14.1
+        image: registry.svc.ci.openshift.org/azure/ci-base:latest
+        name: ""
+        resources: {}
+      serviceAccountName: ci-operator
+    trigger: (?m)^/test( | .* )upgrade-v14.1,?($|\s.*)
+  - agent: kubernetes
     always_run: false
     branches:
     - master
