--- a/core-services/release-controller/_releases/release-ocp-4.2-ci.json
+++ b/core-services/release-controller/_releases/release-ocp-4.2-ci.json
@@ -8,6 +8,17 @@
   "minCreationIntervalSeconds": 1800,
   "pullSecretName": "source",
   "publish":{
+    "mirror-to-origin":{
+      "imageStreamRef":{
+        "namespace": "origin",
+        "name": "4.2",
+        "excludeTags": [
+          "machine-os-content",
+          "ironic-ipa-downloader",
+          "ironic-machine-os-downloader",
+        ]
+      }
+    },
     "tag":{"tagRef":{"name":"4.2-ci"}}
   },
   "verify":{
